# RINGMeshPluginExample

./: .cproject  .project  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
cmake/: RINGMeshPluginExampleConfig.cmake.in
include/example/: common.h  hello_world.h
src/example/: CMakeLists.txt  common.cpp  hello_world.cpp
tests/: CMakeLists.txt  example_tests_config.h.in  test-hello-geomodel.cpp
